# EncryptedNotepad

./: CMakeLists.txt
include/EncryptedNotepad/: App.h  MainUI.h  Notepad.h
src/: App.cpp  MainUI.cpp
